<resources>
    <string name="app_name">MoneyTracker</string>

    <string name="add_item_title">New item</string>
    <string name="itemName">Name</string>
    <string name="itemPrice">0</string>
    <string name="dollar_item">$</string>
    <string name="budget">Budget</string>
    <string name="price_pattern">%1$s $</string>
    <string name="tab_costs">Costs</string>
    <string name="tab_incomes">Incomes</string>
    <string name="tab_balanse">Balanse</string>
    <string-array name="tab_title">
        <item>@string/tab_incomes</item>
        <item>@string/tab_costs</item>
        <item>@string/tab_balanse</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_balanse">Your balanse:</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
</resources>
